No se que hacer mi pana.

--- a/AUT03_01_API_Discos/appsettings.json
+++ b/AUT03_01_API_Discos/appsettings.json
@@ -5,5 +5,14 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "ChinookContext": "Server=(localdb)\\mssqllocaldb;Database=Chinook;Trusted_Connection=True",
+    "AppUserContext": "Server=(localdb)\\mssqllocaldb;Database=Usuarios;Trusted_Connection=True"
+  },
+  "JWT": {
+    "Issuer": "http://localhost",
+    "Audience": "http://localhost",
+    "Key":  "zaq1xsw2cde3vfr4bgt5nhy6mju7KILOÑP"
+  }
 }
